--- a/src/templates/how_it_works.html
+++ b/src/templates/how_it_works.html
@@ -16,7 +16,7 @@
       <li>You enter a query related to internal medicine.</li>
       <li>
         The selected AI model processes your query and retrieves relevant
-        passages from the VIMBook using a retrieval system.
+        passages from the VIMBook using a specialized retrieval system.
       </li>
       <li>
         The retrieved passages are then passed to the language model, which
